--- a/Building Cat Photo App/index.html
+++ b/Building Cat Photo App/index.html
@@ -6,11 +6,11 @@
 
         <section>
             <h2>Cat Photos</h2>
-             <!-- TODO: Add link to cat photos -->
+            <!-- TODO: Add link to cat photos -->
             <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
 
             <a href="https://freecatphotoapp.com">
-            <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
+                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
             </a>
         </section>
 
@@ -18,7 +18,17 @@
             <h2>Cat Lists</h2>
             <h3>Things cats love:</h3>
 
-            <ul></ul>
+            <ul>
+                <li>cat nip</li>
+                <li>laser pointer</li>
+                <li>lasagna</li>
+            </ul>
+
+            <figure>
+                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate">
+                <figcaption>Cats <em>love</em> lasagna</figcaption>
+            </figure>
+
         </section>
 
     </main>
